add more detail